# pandas-rust

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
crates/pandas-rust-core/: Cargo.toml
crates/pandas-rust-python/: Cargo.toml
crates/pandas-rust-python/src/: lib.rs  py_column.rs  py_dataframe.rs  py_groupby.rs  py_index.rs  py_io.rs  py_series.rs
crates/pandas-rust-wasm/: Cargo.toml
crates/pandas-rust-wasm/src/: main.rs
python/pandas/: __init__.py  _testing.py
tests/pandas_compat/: conftest.py  run_compat.py  test_common_patterns.py  test_common_patterns2.py  test_common_patterns3.py  test_common_patterns4.py  test_common_patterns5.py  test_construction.py  test_frame_basic.py  test_frame_indexing.py  test_frame_methods.py  test_frame_ops.py  test_groupby.py  test_io_csv.py  test_merge.py  test_numpy_interop.py  test_series_basic.py  test_series_methods.py  test_series_ops.py  test_upstream_advanced.py  test_upstream_assign.py  test_upstream_astype_replace.py  test_upstream_axis1_cov.py  test_upstream_construction.py  test_upstream_df_series_methods.py  test_upstream_equals_count.py  test_upstream_fillna_dropna.py  test_upstream_filter_pop.py  test_upstream_frame.py  test_upstream_groupby.py  test_upstream_head_tail.py  test_upstream_io_numpy.py  test_upstream_isin_between.py  test_upstream_items_iter.py  test_upstream_loc_csv_misc.py  test_upstream_misc_methods.py  test_upstream_missing_methods.py  test_upstream_properties.py  test_upstream_query_set.py  test_upstream_reindex_map.py  (+6 more)
(+39 files in other folders)
